--- a/index.html
+++ b/index.html
@@ -10,28 +10,26 @@
 <body>
     <header>
         <h1>BookLister</h1>
-        <button type="button">+</button>
+        <button type="button">+</button>    
     </header>
 
     <main>
         <form action="">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name">
+            <input type="text" name="name" id="name" value="" autocomplete="off" required>
 
             <label for="author">Author</label>
-            <input type="text" name="author" id="author">
+            <input type="text" name="author" id="author"
+            value="" autocomplete="off" required>
 
             <label for="pages">Pages</label>
-            <input type="number" name="pages" id="pages">
+            <input type="number" name="pages" id="pages"
+            value="" autocomplete="off" required>
 
-            <button type="submit">Submit</button>
+            <button type="submit" value="submit">Submit</button>
             <button type="button">Cancel</button>
         </form>    
 
-        <div>hi</div>
-        <div>hi</div>
-        <div>hi</div>
-        <div>hi</div>
         <div>hi</div>
     </main>
 
