--- a/index.html
+++ b/index.html
@@ -14,25 +14,23 @@
     </header>
 
     <main>
-        <form action="">
+        <form action="#" onsubmit="yourJsFunction();return false">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" value="" autocomplete="off" required>
+            <input type="text" name="name" id="name"
+            required>
 
             <label for="author">Author</label>
             <input type="text" name="author" id="author"
-            value="" autocomplete="off" required>
+            required>
 
             <label for="pages">Pages</label>
-            <input type="number" name="pages" id="pages"
-            value="" autocomplete="off" required>
+            <input type="number" name="pages" id="pages" required>
 
-            <button type="submit" value="submit">Submit</button>
-            <button type="button">Cancel</button>
+            <button type="submit" class="submit">Submit</button>
+            <button type="button" class="cancel">Cancel</button>
         </form>    
-
-        <div>hi</div>
     </main>
-
+    
     <script src="script.js"></script>
 </body>
 </html>
