--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        <form action="#" onsubmit="yourJsFunction();return false">
+        <form action="#">
             <label for="name">Name</label>
             <input type="text" name="name" id="name"
             required>
@@ -30,7 +30,7 @@
             <button type="button" class="cancel">Cancel</button>
         </form>    
     </main>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
